--- a/TrafficLightButton.HTML
+++ b/TrafficLightButton.HTML
@@ -14,7 +14,7 @@
 
   <body>
     <div class="container"> 
-    <button class="btn" onclick="changeColor(this)">      
+    <button class="btn" onclick="changeColor(trafficLight)">      
     </button>    
     </div>
     <script src="script.js"></script>
